--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="container header">
             <header>
             <img src="logo.png" alt="logo" />
-              <h1>Capital Bikeshare</h1>
+              <h1>Capital Bikeshare <br> Data Visualization</h1>
               <p>by ITC students.</p>
               <nav>
                 <ul>
